[package]
name = "ch559flasher"
version = "1.0.0"
edition = "2021"
description = "CH559 flash utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.14", features = ["derive"] }
exitcode = "1.1.2"
rusb = "0.9.1"
srand = "0.4.0"
thiserror = "1.0.37"
usb-ids = "0.2.4"
